--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,36 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Logs
+*.log
 
-# testing
-/coverage
+# Build output
+.next/
+out/
 
-# next.js
-/.next/
-/out/
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# production
-/build
+# Dependency directories
+bower_components/
 
-# misc
+# MacOS system files
 .DS_Store
-*.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# Docker
+docker-compose.override.yml
+docker-compose.yml
+*.env
 
-# env files (can opt-in for committing if needed)
-.env*
+# VS Code settings
+.vscode/
 
-# vercel
-.vercel
-
-# typescript
+# TypeScript build output
 *.tsbuildinfo
-next-env.d.ts
+
+# Tailwind CSS build
+tailwind.config.js
